# DeepseekOCR-finetuning

./: .gitignore  README.eng.md  README.md  main.py  pyproject.toml
config/: data_config.yaml  deepseek_finetune.yaml  deepseek_original.yaml  prompts.yaml  teacher_api.yaml  train_config.yaml
config/examples/: api_model.example.yaml  local_model.example.yaml  prompts.example.yaml  train_config.example.yaml
docs/: todo.md  vlm_파인튜닝.md
src/: __init__.py
src/data/: __init__.py  collator.py  infer.py  model_adapter.py  pdf2img.py  preprocessor.py
src/eval/: __init__.py  metrics.py
src/train/: __init__.py  layers.py  trainer.py
