[project]
name = "ocr-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "jiwer>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "transformers==4.56.2",
    "unsloth>=2025.12.9",
]
